# fast_zero_sync

./: Dockerfile  README (1).md  README.md  database.db  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 068a4ff0f0cd_create_users_table.py  c50a6481fffa_create_todos_table.py
src/: .coverage
src/fast_zero/: app.py  database.py  models.py  schemas.py  security.py
src/routers/: auth.py  task.py  todo.py  users.py
tests/: .coverage  conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
