[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"

dependencies = [
    "fastapi>=0.115.1,<0.116.0",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "alembic (>=1.16.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "fast_zero", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pytest = "^8.2.0"
pytest-cov = "^4.1.0"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = ["src"]  # Faz o Pytest encontrar o src como raiz de imports
addopts = "-p no:warnings"

[tool.ruff]
line-length = 79


[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.taskipy.tasks]
lint = "ruff check"
pre_format = "ruff check --fix"
format = "ruff format"
run = "uvicorn src.fast_zero.app:app --reload"
pre_test = "task lint"
test = "pytest -s -x --cov=fast_zero -vv"
post_test = "coverage html"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
